...
                      'Version 1.0.0\nDeveloped by [Your Name/Company]',
                      style: jerseyStyle(16, darkMaroon)),
                  actions: [
                    TextButton(
                      onPressed: () => Navigator.pop(context),
                      child:
                          Text('OK', style: jerseyStyle(18, darkMaroon)),
                    ),
                  ],
                ),
              );
            },
          ),
...
              );
            },
          ),
          const Divider(),
          ListTile(
            title: Text(
              'Change Password',
              style: jerseyStyle(20, darkMaroon),
            ),
            leading: const Icon(Icons.lock_reset,
                color: Colors.black54),
            onTap: () => changePassword(context, email),
          ),
...
