...
            style: jerseyStyle(18, darkMaroon),
          ),
        ),
        TextButton(
          onPressed: () => Navigator.pop(context, true),
          child: Text(
            'Change',
            style: jerseyStyle(18, darkMaroon),
          ),
        ),
      ],
    ),
  );
...
