...
  final storage = const FlutterSecureStorage();
  bool _isLoading = false;

  Future<void> _showResultPopup(
      BuildContext context, String message, bool isSuccess) async {
    final Color titleColor = isSuccess ? darkMaroon : errorRed;
    final String titleText = isSuccess ? 'Success' : 'Error';

    return showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: Text(
          titleText,
...
